@@ -45,7 +45,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import javax.json.Json;
 import javax.json.JsonObject;
@@ -158,7 +157,7 @@ public final class RecordImpl implements Record {
                     final List<Entry> fields = this.providedSchema.naturalOrder()
                             .getFieldsOrder()
                             .map(n -> this.getEntryWithErrorIfAny(this.providedSchema.getEntry(n)))
-                            .collect(Collectors.toList());
+                            .toList();
                     this.orderState = new OrderState(fields);
                 }
             }
@@ -222,9 +221,9 @@ public final class RecordImpl implements Record {
         @Override
         public List<Entry> getCurrentEntries() {
             if (this.providedSchema != null) {
-                return Collections.unmodifiableList(this.providedSchema.getAllEntries().collect(Collectors.toList()));
+                return Collections.unmodifiableList(this.providedSchema.getAllEntries().toList());
             }
-            return this.entries.streams().collect(Collectors.toList());
+            return this.entries.streams().toList();
         }
 
         @Override
@@ -236,7 +235,7 @@ public final class RecordImpl implements Record {
             }
 
             final BuilderImpl builder =
-                    new BuilderImpl(this.providedSchema.getAllEntries().collect(Collectors.toList()), this.values);
+                    new BuilderImpl(this.providedSchema.getAllEntries().toList(), this.values);
             return builder.removeEntry(schemaEntry);
         }
 
@@ -267,7 +266,7 @@ public final class RecordImpl implements Record {
             }
 
             final BuilderImpl builder =
-                    new BuilderImpl(this.providedSchema.getAllEntries().collect(Collectors.toList()),
+                    new BuilderImpl(this.providedSchema.getAllEntries().toList(),
                             this.values);
             return builder.updateEntryByName(name, schemaEntry);
         }
@@ -698,7 +697,7 @@ public final class RecordImpl implements Record {
 
             public Comparator<Entry> buildComparator() {
                 final List<String> orderedFields =
-                        this.orderedEntries.streams().map(Entry::getName).collect(Collectors.toList());
+                        this.orderedEntries.streams().map(Entry::getName).toList();
                 return EntriesOrder.of(orderedFields);
             }
         }
