@@ -18,7 +18,6 @@ package org.talend.sdk.component.runtime.manager.chain;
 import static java.net.URLEncoder.encode;
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyMap;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -187,7 +186,7 @@ class JobTest {
                     .build()
                     .run();
             // {"cumulatedSize":15}.length x2
-            assertEquals(asList(15, 30), outputs.stream().map(json -> json.getInt("cumulatedSize")).collect(toList()));
+            assertEquals(asList(15, 30), outputs.stream().map(json -> json.getInt("cumulatedSize")).toList());
         }
     }
 
