@@ -15,7 +15,6 @@
  */
 package org.talend.sdk.component.starter.server.front.apidemo.component.source;
 
-import static java.util.stream.Collectors.toList;
 import static org.talend.sdk.component.starter.server.front.apidemo.component.configuration.TableDataSet.READ_ALL_RECORD_FROM_SERVER;
 import static org.talend.sdk.component.starter.server.front.apidemo.component.service.http.TableApiClient.API_BASE;
 import static org.talend.sdk.component.starter.server.front.apidemo.component.service.http.TableApiClient.API_VERSION;
@@ -112,7 +111,7 @@ public class MockTableMapper implements Serializable {
             dataSetChunk.setOffset(from);
             dataSetChunk.setMaxRecords(to);
             return new MockTableMapper(dataSetChunk, service, i18n, tableAPI);
-        }).filter(Objects::nonNull).collect(toList());
+        }).filter(Objects::nonNull).toList();
     }
 
     @Emitter
