@@ -16,7 +16,6 @@
 package org.talend.runtime.documentation.component.service;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.talend.runtime.documentation.component.configuration.BasicAuthConfig.NAME;
 import static org.talend.runtime.documentation.component.service.http.TableApiClient.API_BASE;
 import static org.talend.runtime.documentation.component.service.http.TableApiClient.API_VERSION;
@@ -99,7 +98,7 @@ public class MockTableService {
         return new Values(Stream
                 .of(QueryBuilder.Fields.values())
                 .map(f -> new Values.Item(f.name(), f.name()))
-                .collect(toList()));
+                .toList());
     }
 
     public interface Client extends HttpClient {
@@ -122,7 +121,7 @@ public class MockTableService {
             return new Schema(emptyList());
         }
 
-        return new Schema(record.keySet().stream().map(this::buildStringEntry).collect(toList()));
+        return new Schema(record.keySet().stream().map(this::buildStringEntry).toList());
     }
 
     private org.talend.sdk.component.api.record.Schema.Entry buildStringEntry(final String name) {
