@@ -17,7 +17,6 @@ package org.talend.sdk.component.test.connectors.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.talend.sdk.component.api.configuration.Option;
 import org.talend.sdk.component.api.service.Service;
@@ -66,7 +65,7 @@ public class ActionsServices {
                 .stream()
                 .map(i -> String.valueOf(i))
                 .map(i -> new Item(i, i18n.entityName(i)))
-                .collect(Collectors.toList());
+                .toList();
 
         return new SuggestionValues(true, entities);
     }
